Add user defined function Add view relationships Fix dynamic SQL case insentiive table lookup Eliminate non-column table children Put back in complete powershell wrapper

--- a/Analyzer.Database/Analyzer.Database.csproj
+++ b/Analyzer.Database/Analyzer.Database.csproj
@@ -63,6 +63,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Visitors\ColumnVisitor.cs" />
+    <Compile Include="Visitors\FunctionVisitor.cs" />
+    <Compile Include="Visitors\ViewDependencyVisitor.cs" />
     <Compile Include="Visitors\StoredProcedureDependencyVisitor.cs" />
     <Compile Include="Visitors\ViewVisitor.cs" />
     <Compile Include="Visitors\StoredProcedureVisitor.cs" />
