--- a/Analyzer.Model/Analyzer.Model.csproj
+++ b/Analyzer.Model/Analyzer.Model.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Nodes\BizTalkServer.cs" />
     <Compile Include="Nodes\Class.cs" />
     <Compile Include="Nodes\Column.cs" />
+    <Compile Include="Nodes\UserDefinedFunction.cs" />
     <Compile Include="Nodes\ReportServer.cs" />
     <Compile Include="Nodes\Report.cs" />
     <Compile Include="Nodes\Database.cs" />
@@ -91,6 +92,9 @@
     <Compile Include="Relationships\AbstractReferencesRelationship.cs" />
     <Compile Include="Relationships\BizTalkServerContainsBizTalkApplication.cs" />
     <Compile Include="Relationships\BizTalkServerContainsBizTalkReceiveLocation.cs" />
+    <Compile Include="Relationships\DatabaseContainsUserDefinedFunction.cs" />
+    <Compile Include="Relationships\ViewReferencesColumn.cs" />
+    <Compile Include="Relationships\ViewReferencesTable.cs" />
     <Compile Include="Relationships\RootContainsBizTalkServer.cs" />
     <Compile Include="Relationships\StoredProcedureReferencesTable.cs" />
     <Compile Include="Relationships\RelationshipPayload.cs" />
